@@ -5,6 +5,7 @@ Changes in 1.4.10-stable:
  o support compilation on Haiku
  o fix signal processing when a signal callback delivers a signal; from Alexander Drozdov
  o const-ify some arguments to evdns functions.
+ o off-by-one error in epoll_recalc; reported by Victor Goya
 
 Changes in 1.4.9-stable:
  o event_add would not return error for some backends; from Dean McNamee
